changed layout for Disturb

--- a/poster/poster-svoboda/poster.tex
+++ b/poster/poster-svoboda/poster.tex
@@ -295,10 +295,6 @@ The total length is close to 10 m, which was achieved by constructing a ``trombo
 The amplified signal is digitized with a sampling frequency of 25 MHz and then processed on a computer. The data sample is then fitted to a function $f(t)=A \cdot \sin (2\pi\cdot 5e5 t + \varphi)$ and $\varphi$ is extracted and normalized. Only ranges of points close to $0$ are processed, because there the signal is assumed to be the least influenced by amplitude dampening.
  }
 
- \headerbox{Signal Disturbances}{name=disturb,column=0,row=2,span=2,below=analog}
- {
- %what why
- }<++>
 \headerbox{Future Plans}{name=plans,column=2,row=3,below=modulation}
 {
 \begin{itemize}
@@ -321,7 +317,7 @@ The amplified signal is digitized with a sampling frequency of 25 MHz and then p
 %  \vspace{0.5em}
 %}
 
-\headerbox{References}{name=References,column=2,row=1, span=1,below=plans}
+\headerbox{References}{name=ref,column=2,row=1, span=1,below=plans}
 {
  MATĚJŮ, Michael. {\em Měření hustoty plazmatu metodami mikrovlnné interferometre.} FJFI, 2008. 44 s. Bakalářská práce. ČVUT, FJFI, Katedra fyziky.
  
@@ -334,5 +330,9 @@ The amplified signal is digitized with a sampling frequency of 25 MHz and then p
  %   \bibliography{biblio}
 }
 
+ \headerbox{Signal Disturbances}{name=disturb,column=0,row=2,span=2,below=ref}
+ {
+ %what why
+ }<++>
 \end{poster}
 \end{document}
