removed cite info SHOULD BE BACK IF UNNECESSARY and made disturb bigger...just one more box :)

--- a/poster/poster-svoboda/poster.tex
+++ b/poster/poster-svoboda/poster.tex
@@ -319,7 +319,8 @@ The amplified signal is digitized with a sampling frequency of 25 MHz and then p
 
 \headerbox{References}{name=ref,column=2,row=1, span=1,below=plans}
 {
- MATĚJŮ, Michael. {\em Měření hustoty plazmatu metodami mikrovlnné interferometre.} FJFI, 2008. 44 s. Bakalářská práce. ČVUT, FJFI, Katedra fyziky.
+ MATĚJŮ, Michael. {\em Měření hustoty plazmatu metodami mikrovlnné interferometre.} FJFI, 2008. 
+ %44 s. Bakalářská práce. ČVUT, FJFI, Katedra fyziky.
  
  % \nocite{FusenEngDes11}
  % \nocite{Zara06}
@@ -330,7 +331,7 @@ The amplified signal is digitized with a sampling frequency of 25 MHz and then p
  %   \bibliography{biblio}
 }
 
- \headerbox{Signal Disturbances}{name=disturb,column=0,row=2,span=2,below=ref}
+ \headerbox{Signal Disturbances}{name=disturb,column=0,row=2,span=3,below=ref}
  {
  %what why
  }<++>
