utilize the left space

--- a/poster/poster-svoboda/poster.tex
+++ b/poster/poster-svoboda/poster.tex
@@ -303,7 +303,7 @@ Only ranges of points close to $0$ are processed, because there the signal is as
 \begin{itemize}
         \compresslist
     \item  Overcome possible coupling with the chamber by using a new and well grounded saw-tooth voltage and trigger generator
-    \item Study the influence of plasma stability with the Mirnov coils based plasma position stabilization system.
+    \item Further study of the influence of plasma stability once the Mirnov coils based plasma position stabilization system is operational
 \end{itemize}
 }
 %\headerbox{Conclusion}{name=conclusion,column=2,row=4,below=plans}
