expanded author field

--- a/poster/poster-svoboda/poster.tex
+++ b/poster/poster-svoboda/poster.tex
@@ -194,7 +194,7 @@
   {%\sf %Sans Serif
   \sc\huge Electron Density Measurement at the GOLEM Tokamak \vspace{ 0.2cm}}
   % Authors
-  {Ondřej Grover
+  {Ondřej Grover, ondrej.grover@gmail.com\\ golem.fjfi.cvut.cz
   %Sans Serif
   % Serif
   %E. Bromov\'a$^1$, I. \v Duran$^2$, O. Grover$^1$, J. Kocman$^1$, T. Markovi\v{c}$^1$, M. Odstr\v cil$^{12}$, T.\,Odstr\v cil$^1$\!, O.\,Pluha\v r$^3$\!, J.\,St\" ockel$^2$\!, V.\,Svoboda$^1$\!, A.\,\v Sindlery$^1$\!, G.\,Vondr\'a\v sek$^1$\!, J.\,Zara$^3$\!.\\
