minor passive tense fix

--- a/proceeding/GROVER_ONDREJ.tex
+++ b/proceeding/GROVER_ONDREJ.tex
@@ -38,7 +38,7 @@ O. Grover, ondrej.grover@gmail.com, FJFI CVUT}\\ %TODO what address and other au
 %8, 2011.\\
 }]
 \section{INTRODUCTION}
-Electron density is on of the key parameters in the field of plasma physics. Its measurement gives us important information about the behaviour and characteristics of plasma. For that purpose many different methods of density measurement exist.% yoda
+Electron density is on of the key parameters in the field of plasma physics. Its measurement provides important information about the behaviour and characteristics of plasma. For that purpose many different methods of density measurement exist.% yoda
 The most widespread are microwave diagnostics, mainly because of their non-invasive nature. 
 
 The microwave interferometer which has been recently installed at the GOLEM Tokamak measures the line-averaged electron density and can be used to track the time evolution during a discharge.%time evolution\ldots term?
