changed the title

--- a/proceeding/GROVER_ONDREJ.tex
+++ b/proceeding/GROVER_ONDREJ.tex
@@ -24,7 +24,7 @@
 \twocolumn[{
 %\vspace*{1.7cm}   % for the title  page only
 %\begin{center}
-{\large\bf Density measurement via microwave interferometry at the GOLEM Tokamak}\\
+{\large\bf INTERFEROMETRIC PLASMA DENSITY MEASUREMENT IN GOLEM TOKAMAK}\\
 
 {\small %A. Author, e-mail, B. Author, e-mail, address and C.
 O. Grover, ondrej.grover@gmail.com, FJFI CVUT}\\ %TODO what address and other authors included ?
