added outline and some cz tweaks

--- a/proceeding/GROVER_ONDREJ.tex
+++ b/proceeding/GROVER_ONDREJ.tex
@@ -26,8 +26,8 @@
 %\begin{center}
 {\large\bf INTERFEROMETRIC PLASMA DENSITY MEASUREMENT IN GOLEM TOKAMAK}\\
 
-{\small %A. Author, e-mail, B. Author, e-mail, address and C.
-O. Grover, ondrej.grover@gmail.com, FJFI CVUT}\\ %TODO what address and other authors included ?
+	{\small %A. Author, e-mail, B. Author, e-mail, address and C.
+O. Grover, ondrej.grover@gmail.com, FJFI CVUT (Cesta k Vědě)}\\ %TODO what address and other authors included ?
 
 %\end{center}
 %\vspace*{1ex}
@@ -98,9 +98,19 @@ it is true that $f_{mod}=f_{diff}$ and thus the frequency of the resulting beats
 
 The beat interference is then processed by a selective frequency band amplifier which amplifies signals with frequencies $500 \pm 20$ kHz. Therefore, the parameters of the saw-tooth voltage signal are $f_{mod}=500$ kHz and $\Delta L$ is set for (\ref{eq:Df}) to be true.
 
+\section{WAVEGUIDE MODEL}
+
+\section{METHODS OF SIGNAL ANALYSIS}
+
+\section{SIGNAL DISTURBANCES}
 
 
+\section{ACKNOWLEDGEMENTS}
+
+Ing. Vojtěch Svoboda %I wouldlike to thank... 
 %------------------------------------
+
+
 \begin{thebibliography}{99}
 
 %\newcommand{\noopsort}[1]{} \newcommand{\printfirst}[2]{#1}
