added signal disturbances and utf8x

--- a/proceeding/GROVER_ONDREJ.tex
+++ b/proceeding/GROVER_ONDREJ.tex
@@ -18,6 +18,7 @@
             T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
 
 \usepackage{graphicx}
+\usepackage[utf8x]{inputenc}
 % ------------------------------------------------------------------------
 \begin{document}
 \sloppy
@@ -110,7 +111,13 @@ The oscilloscope digitizes the signal with a sampling f. of 25 MHz. The data is 
 
 \section{SIGNAL DISTURBANCES}
 
+During most discharges several different disturbances have been observed. These regions are characterised by an increase or decrease in the frequency of the amplified sine wave signal which is interpreted as rapid increase or decrease of the phase shift by both of the methods of analysis.
 
+These disturbances are assumed to be triggered by the behaviour of plasma during the discharge, because they occur usually only after the initial exponential rise in the density and do not occur while there is no plasma in the chamber. By increasing the temperature of the chamber which results in a better vacuum the stability of the plasma during the discharge is improved. The stability of the discharge appears to greatly affect the number of occurrences of the disturbances.
+
+It is therefore hypothesized that there exists coupling of the diagnostic analysis hardware and the chamber through the waveguide system and it may be the event of plasma crashing on the wall of the chamber that triggers the disturbances.
+
+However, it is not clear what the relationship between the triggering event and the change in the frequency is. 
 \section{ACKNOWLEDGEMENTS}
 
 Ing. Vojtěch Svoboda %I wouldlike to thank... 
