finished signal disturbances

--- a/proceeding/GROVER_ONDREJ.tex
+++ b/proceeding/GROVER_ONDREJ.tex
@@ -117,7 +117,9 @@ These disturbances are assumed to be triggered by the behaviour of plasma during
 
 It is therefore hypothesized that there exists coupling of the diagnostic analysis hardware and the chamber through the waveguide system and it may be the event of plasma crashing on the wall of the chamber that triggers the disturbances.
 
-However, it is not clear what the relationship between the triggering event and the change in the frequency is. 
+However, it is not clear what the relationship between the triggering event and the change in the frequency is. The hypothesized coupling would most likely change the generated $f_{mod}$ and/or $\Delta f$ which could for example result in disrupting (\ref{eq:Df}) and making the triggering frequency obsolete. However, such scenarios fail to completely explain the disturbances.
+
+In the future a different saw-tooth voltage and trigger signal generator with better grounding will be used to overcome the possible coupling. The plasma position stabilisation system, once fully operational, will be used to improve the stability of the discharge.
 \section{ACKNOWLEDGEMENTS}
 
 Ing. Vojtěch Svoboda %I wouldlike to thank... 
