added waveguide system section

--- a/proceeding/GROVER_ONDREJ.tex
+++ b/proceeding/GROVER_ONDREJ.tex
@@ -101,6 +101,11 @@ The beat interference is then processed by a selective frequency band amplifier 
 
 \section{WAVEGUIDE MODEL}
 
+All the diagnostic hardware including the amplifier and the generator were designed to work with the waveguide system as it was constructed at the Czech Academy of Sciences for the CASTOR tokamak, so the band of the amplifier is fixed and $\Delta f$ can be set only within a certain range.
+
+Therefore, the new waveguide system had to have approximately the same length as the old one (about 12 m) and at the same time fit into the modest room where the GOLEM tokamak is today located. 
+This was achieved by constructing several U-turns resulting in a ``trombone-like'' design.
+
 \section{METHODS OF SIGNAL ANALYSIS}
 
 The output of the amplifier is a sine wave signal with a frequency $f_{mod}$. The phase shift can be extracted from it by either an analogue analysis circuit or digitally by first digitizing the signal with a Tektronix DPO 3014 oscilloscope and then processing on a computer. 
@@ -132,9 +137,9 @@ Ing. Vojtěch Svoboda %I wouldlike to thank...
 %      \newcommand{\singleletter}[1]{#1} \newcommand{\switchargs}[2]{#2#1}
 \leftskip=-5pt \vspace{-0.3truecm}
 \bibitem{mateju} MATEJU, M.
-\bibitem{RA_82} R.~Autor, Journal a. {\bf 2}, 2345 (2001).
-\bibitem{SA_77} S.~Autor, Journal b. {\bf 32}, 4567 (2002).
-\bibitem{4} B. Author: Book name (Publisher, town - 2003).
+%\bibitem{RA_82} R.~Autor, Journal a. {\bf 2}, 2345 (2001).
+%\bibitem{SA_77} S.~Autor, Journal b. {\bf 32}, 4567 (2002).
+%\bibitem{4} B. Author: Book name (Publisher, town - 2003).
 \end{thebibliography}
 
 
