--- a/proceeding/GROVER_ONDREJ.tex
+++ b/proceeding/GROVER_ONDREJ.tex
@@ -1,7 +1,7 @@
 \documentclass[twoside]{articlek}
 \newcommand{\mins}{&\!\!\!\!}
 \renewcommand{\refname}{REFERENCES}
-\textwidth=17.3truecm \hoffset=0.55truecm \textheight=24.4truecm
+\textwidth=17.3truecm \hoffset=0.55truecm \textheight=25truecm
 \topmargin=-2.2truecm \columnsep=0.7truecm \oddsidemargin =
 -.4truecm \evensidemargin = -1.7truecm \pagenumbering{arabic}
 \pagestyle{headings} \setcounter{page}{0}
@@ -115,8 +115,15 @@ The analogue circuit measures the time between the trigger signal and the roots 
 The oscilloscope digitizes the signal with a sampling f. of 25 MHz. The data is then filtered for regions where the amplitude is close to 0, because there the amplitude dampening is assumed to be minimal. These regions are then fitted to $f(t)=A\sin(2 \pi 5e5 t+ \varphi)$ and the fitted value of $\varphi$ is further processed with (\ref{eq:ne}).
 
 \section{SIGNAL DISTURBANCES}
+\begin{figure}
+    \begin{center}
+        \includegraphics[width=.5\textwidth]{data.eps}
+    \end{center}
+    \caption{Electron density during discharge \# 5725}
+    \label{fig:data}
+\end{figure}
 
-During most discharges several different disturbances have been observed. These regions are characterised by an increase or decrease in the frequency of the amplified sine wave signal which is interpreted as rapid increase or decrease of the phase shift by both of the methods of analysis.
+During most discharges several different disturbances have been observed as seen for example in Figure \ref{fig:data}. These regions are characterised by an increase or decrease in the frequency of the amplified sine wave signal which is interpreted as rapid increase or decrease of the phase shift by both of the methods of analysis.
 
 These disturbances are assumed to be triggered by the behaviour of plasma during the discharge, because they occur usually only after the initial exponential rise in the density and do not occur while there is no plasma in the chamber. By increasing the temperature of the chamber which results in a better vacuum the stability of the plasma during the discharge is improved. The stability of the discharge appears to greatly affect the number of occurrences of the disturbances.
 
@@ -127,7 +134,7 @@ However, it is not clear what the relationship between the triggering event and 
 In the future a different saw-tooth voltage and trigger signal generator with better grounding will be used to overcome the possible coupling. The plasma position stabilisation system, once fully operational, will be used to improve the stability of the discharge.
 \section{ACKNOWLEDGEMENTS}
 
-Ing. Vojtěch Svoboda %I wouldlike to thank... 
+Ing. Vojtěch Svoboda \dots project supervisor%I wouldlike to thank... 
 %------------------------------------
 
 
