--- a/proceeding/GROVER_ONDREJ.tex
+++ b/proceeding/GROVER_ONDREJ.tex
@@ -131,22 +131,20 @@ It is therefore hypothesized that there exists coupling of the diagnostic analys
 
 However, it is not clear what the relationship between the triggering event and the change in the frequency is. The hypothesized coupling would most likely change the generated $f_{mod}$ and/or $\Delta f$ which could for example result in disrupting (\ref{eq:Df}) and making the triggering frequency obsolete. However, such scenarios fail to completely explain the disturbances.
 
-In the future a different saw-tooth voltage and trigger signal generator with better grounding will be used to overcome the possible coupling. The plasma position stabilisation system, once fully operational, will be used to improve the stability of the discharge.
-\section{ACKNOWLEDGEMENTS}
+In the future a different saw-tooth voltage and trigger signal generator with better grounding will be used to overcome the possible coupling. The plasma position stabilisation system, once fully operational, will be used to improve the stability of the discharge.\\
 
-Ing. Vojtěch Svoboda \dots project supervisor%I wouldlike to thank... 
+\noindent ACKNOWLEDGEMENTS: This project has been supervised by Ing. Vojtěch Svoboda %I wouldlike to thank... 
 %------------------------------------
 
 
 \begin{thebibliography}{99}
 
-%\newcommand{\noopsort}[1]{} \newcommand{\printfirst}[2]{#1}
-%      \newcommand{\singleletter}[1]{#1} \newcommand{\switchargs}[2]{#2#1}
-\leftskip=-5pt \vspace{-0.3truecm}
-\bibitem{mateju} MATEJU, M.
-%\bibitem{RA_82} R.~Autor, Journal a. {\bf 2}, 2345 (2001).
-%\bibitem{SA_77} S.~Autor, Journal b. {\bf 32}, 4567 (2002).
-%\bibitem{4} B. Author: Book name (Publisher, town - 2003).
+%\leftskip=-5pt \vspace{-0.3truecm}
+\bibitem{mateju}
+   MATĚJŮ, Michael.
+   {\em Měření hustoty plazmatu metodami mikrovlnné interferometre. }
+   FJFI, 2008. 44 s. Bakalářská práce. ČVUT, FJFI, Katedra fyziky. Dostupné z WWW: {\tt http://golem.fjfi.cvut.cz/files/students/
+   BcTh/MatejuMichael.pdf}.
 \end{thebibliography}
 
 
