--- a/proceeding/GROVER_ONDREJ.tex
+++ b/proceeding/GROVER_ONDREJ.tex
@@ -28,25 +28,18 @@
 {\large\bf INTERFEROMETRIC PLASMA DENSITY MEASUREMENT IN GOLEM TOKAMAK}\\
 
 	{\small %A. Author, e-mail, B. Author, e-mail, address and C.
-O. Grover, ondrej.grover@gmail.com, FJFI ČVUT (Cesta k Vědě)}\\ %TODO what address and other authors included ?
+O. Grover, ondrej.grover@gmail.com, FJFI ČVUT (Cesta k Vědě)}\\ 
 
-%\end{center}
-%\vspace*{1ex}
-
-%{\bf ABSTRACT.} These are the guidelines for preparation of
-%manuscripts of the contributions to the proceedings of the 17th
-%Conference of Czech and Slovak Physicists, held on September 5 -
-%8, 2011.\\
 }]
 \section{INTRODUCTION}
-Electron density is on of the key parameters in the field of plasma physics. Its measurement provides important information about the behaviour and characteristics of plasma. For that purpose many different methods of density measurement exist.% yoda
+Electron density is on of the key parameters in the field of plasma physics. Its measurement provides important information about the behaviour and characteristics of plasma. For that purpose many different methods of density measurement exist.
 The most widespread are microwave diagnostics, mainly because of their non-invasive nature. 
 
-The microwave interferometer which has been recently installed at the GOLEM Tokamak measures the line-averaged electron density and can be used to track the time evolution during a discharge.%time evolution\ldots term?
-This diagnostic had been previously implemented on the same device when it was in service as the CASTOR Tokamak %reformulate 
+The microwave interferometer which has been recently installed at the GOLEM Tokamak measures the line-averaged electron density and can be used to track the time evolution during a discharge.
+This diagnostic had been previously implemented on the same device when it was in service as the CASTOR Tokamak 
 at the Czech Academy of Sciences and the whole waveguide system and other analytical hardware were made with the specific parameters of the site and work-flow in mind. This paper presents the current state of implementation at the GOLEM Tokamak.
 
-\section{FUNDAMENTAL PRINCIPLES OF OPERATION} % find something better and CAPS
+\section{FUNDAMENTAL PRINCIPLES OF OPERATION} 
 
 In ionized plasma oscillations of electrons around ions arise when the homogeneity of the electrostatic charge is disrupted. The angular frequency of such plasma oscillations $\omega_p$ is dependant on the electron density $n_e$. 
 
@@ -62,7 +55,7 @@ Therefore an EM wave with a given angular frequency $\omega>\omega_p$ has a real
 As $\omega$ approaches $\omega_p$, the refractive index $n$ approaches 0 so the EM wave cannot propagate and is reflected. Thus for probing beam with a given $\omega$ there is a so called critical density $n_{crit}$ above which the measurement cannot take place.
 
 
-A microwave beam probing the plasma undergoes a phase shift $\Delta \varphi$ due to the different $n$.  %or is it not ? REFORMULATE
+A microwave beam probing the plasma undergoes a phase shift $\Delta \varphi$ due to the different $n$.  
 As $n_e$ and therefore also $n$ differs throughout the plasma, the total phase shift is directly proportional to the line integral of $n_e$ over the distance $d$ traveled through plasma as has been derived in \cite{mateju}
 \begin{equation}
     \overline{n_e}=\frac{ n_{crit}\lambda_0 }{d \pi}\Delta \varphi
@@ -139,13 +132,11 @@ However, it is not clear what the relationship between the triggering event and 
 
 In the future a different saw-tooth voltage and trigger signal generator with better grounding will be used to overcome the possible coupling. The plasma position stabilisation system, once fully operational, will be used to improve the stability of the discharge.\\
 
-\noindent ACKNOWLEDGEMENTS: This project has been supervised by Ing. Vojtěch Svoboda %I wouldlike to thank... 
+\noindent ACKNOWLEDGEMENTS: This project has been supervised by Ing. Vojtěch Svoboda 
 %------------------------------------
 
 
 \begin{thebibliography}{99}
-
-%\leftskip=-5pt \vspace{-0.3truecm}
 \bibitem{mateju}
    MATĚJŮ, Michael.
    {\em Měření hustoty plazmatu metodami mikrovlnné interferometre. }
